# NitroDWC

./: .gitattributes  meson.build  meson.options
include/: dwc.h  dwc_version.h
include/ac/: dwc_ac.h
include/auth/: dwc_auth.h  dwc_http.h  dwc_netcheck.h  dwc_prof.h  dwc_svl.h  util_alloc.h
include/base/: dwc_account.h  dwc_base_gamespy.h  dwc_connectinet.h  dwc_core.h  dwc_error.h  dwc_friend.h  dwc_ghttp.h  dwc_init.h  dwc_login.h  dwc_main.h  dwc_match.h  dwc_memfunc.h  dwc_nasfunc.h  dwc_nd.h  dwc_ranking.h  dwc_report.h  dwc_transport.h
include/gs/: available.h  core.h  darray.h  dummy_auth.h  gsiDebug.h  gsiMemory.h  hashtable.h  md5.h  nonport.h  soap.h  stringutil.h
include/gs/chat/: chat.h  chatASCII.h  chatCallbacks.h  chatChannel.h  chatCrypt.h  chatHandlers.h  chatMain.h  chatSocket.h
include/gs/ghttp/: ghttp.h  ghttpASCII.h  ghttpBuffer.h  ghttpCallbacks.h  ghttpCommon.h  ghttpConnection.h  ghttpEncryption.h  ghttpMain.h  ghttpPost.h  ghttpProcess.h
include/gs/gp/: gp.h  gpi.h  gpiBuddy.h  gpiBuffer.h  gpiCallback.h  gpiConnect.h  gpiInfo.h  gpiOperation.h  gpiPeer.h  gpiProfile.h  gpiSearch.h  gpiTransfer.h  gpiUnique.h  gpiUtility.h
include/gs/gstats/: gbucket.h  gpersist.h  gstats.h
include/gs/gt2/: gt2.h  gt2Auth.h  gt2Buffer.h  gt2Callback.h  gt2Connection.h  gt2Encode.h  gt2Filter.h  gt2Main.h  gt2Message.h  gt2Socket.h  gt2Utility.h
include/gs/natneg/: natneg.h  nninternal.h
include/gs/qr2/: qr2.h  qr2regkeys.h
include/gs/serverbrowsing/: sb_ascii.h  sb_crypt.h  sb_internal.h  sb_serverbrowsing.h
include/nd/: DWCi_Nd.h
include/nhttp/: NHTTP.h
include/ranking/: dwc_ranksession.h
include/util/: dwc_utility.h
libraries/: meson.build
libraries/ac/: meson.build
libraries/account/: meson.build
libraries/account/src/: dwc_account.c  dwc_init.c  dwc_report.c  meson.build
libraries/auth/: meson.build
libraries/base/: meson.build
libraries/base/src/: dwc_common.c  dwc_connectinet.c  dwc_error.c  dwc_friend.c  dwc_ghttp.c  dwc_login.c  dwc_main.c  dwc_match.c  dwc_memfunc.c  dwc_nasfunc.c  dwc_nd.c  dwc_ranking.c  dwc_transport.c  meson.build
libraries/bm/: meson.build
libraries/gs/: meson.build
libraries/gs/chat/: meson.build
libraries/gs/common/: meson.build
libraries/gs/ghttp/: meson.build
libraries/gs/gp/: meson.build
libraries/gs/gstats/: meson.build
libraries/gs/gt2/: meson.build
libraries/gs/natneg/: meson.build
libraries/gs/pinger/: meson.build
libraries/nd/: meson.build
libraries/nhttp/: meson.build
libraries/ranking/: meson.build
libraries/util/: meson.build
subprojects/: NitroSystem.wrap  NitroWiFi.wrap
(+3 files in other folders)
